# mcproto

./: Cargo.toml
packet_derive/: Cargo.toml
packet_derive/src/: lib.rs
src/: connection.rs  error.rs  handler.rs  handshake.rs  lib.rs  packet.rs  read_ext.rs  sio.rs  state.rs  types.rs  varint.rs  write_ext.rs
src/net/: encryption.rs  handler.rs  mod.rs  state.rs
src/packet/: builder.rs  configuration.rs  handshaking.rs  login.rs  mod.rs  play.rs  status.rs
src/tokio/: mod.rs
src/types/: mod.rs  proxy.rs
src/versions/: justfile  mod.rs
src/versions/next/: mod.rs  states.rs
src/versions/v107/: mod.rs
src/versions/v108/: mod.rs
src/versions/v109/: mod.rs
src/versions/v110/: mod.rs
src/versions/v210/: mod.rs
src/versions/v3/: mod.rs
src/versions/v315/: mod.rs  states.rs
src/versions/v316/: mod.rs
src/versions/v335/: mod.rs
src/versions/v338/: mod.rs
src/versions/v340/: mod.rs
src/versions/v393/: mod.rs
src/versions/v4/: mod.rs  states.rs
src/versions/v401/: mod.rs
src/versions/v404/: mod.rs
src/versions/v47/: mod.rs
src/versions/v477/: mod.rs
src/versions/v480/: mod.rs
src/versions/v485/: mod.rs
src/versions/v490/: mod.rs
src/versions/v498/: mod.rs
src/versions/v5/: mod.rs
src/versions/v573/: mod.rs
src/versions/v575/: mod.rs
src/versions/v578/: mod.rs
src/versions/v735/: mod.rs  states.rs
src/versions/v736/: mod.rs
src/versions/v751/: mod.rs
src/versions/v753/: mod.rs
src/versions/v754/: mod.rs
src/versions/v755/: mod.rs
src/versions/v756/: mod.rs
src/versions/v757/: mod.rs
(+118 files in other folders)
