[package]
name = "mcproto"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packet_derive = { path = "packet_derive" }
uuid = "1.14.0"
thiserror = "2.0.11"
tracing = "0.1.41"

# -- compression
flate2 = "1.1.0"

# -- encryption
crypto-common = "0.1.6"
aes = "0.8.4"
cfb8 = "=0.8.1"
bytes = "1.10.0"

[features]
tokio = ["dep:tokio"]

[dependencies.tokio]
optional = true
version = "1.43.0"
features = ["io-util", "net"]
